# ev-route-optimizer

./: .gitignore  .replit  LOCAL_SETUP.md  README.md  SIMPLE_SETUP.md  add_status.py  app.py  create_sample_data.py  db_testfile.py  ev_route_map.html  flask_app.py  pyproject.toml  replit.md  requirements.txt  robust_tester.py  route_data.json  secret.py  test_cluster.py  testfile.py
clustering/: clustering_engine.py
database/: db_connection.py
filtering/: station_filters.py
ml_models/: __init__.py  adaptive_router.py  station_predictor.py  travel_time_predictor.py
routing/: ev_router.py
static/js/: app.js
templates/: index.html
test_data/: ev_station_dump.json
utils/: distance_calculator.py  geojson_exporter.py
visualization/: map_visualizer.py
